# project_C

./: .gitignore  CMakeLists.txt  Makefile  README.md  patent_demo.html  patent_report.html  train_and_evaluate.ipynb
apps/: gpt_demo.cpp
data/: truyen_kieu.txt  vietnamese.txt  vietnamese_large.txt
examples/: console.cpp  demo.cpp  gpt_demo.cpp  mlp_demo.cpp  mnist_demo.cpp  regression_demo.cpp
include/mlcpp/: autograd.hpp  csv.hpp  linalg.hpp  linreg.hpp  logreg.hpp  matrix.hpp  mnist.hpp  nn.hpp  random.hpp  stats.hpp
include/mlcpp/core/: linalg.hpp
include/mlcpp/data/: csv.hpp  mnist.hpp  tokenizer.hpp
include/mlcpp/dl/: autograd.hpp  nn.hpp  sampling.hpp
include/mlcpp/ml/: linreg.hpp  logreg.hpp
include/mlcpp/models/: transformer.hpp
include/mlcpp/prob/: stats.hpp
lib/include/mlcpp/: mlcpp.hpp
lib/include/mlcpp/core/: quantize.hpp  serialize.hpp
lib/include/mlcpp/models/: transformer.hpp
lib/src/core/: matrix.cpp  quantize.cpp  serialize.cpp
lib/src/dl/: autograd.cpp  nn.cpp  sampling.cpp
patent/: README.md  screen_all.py  screen_html.py
patent/cli/: patent.cpp
patent/design/: build_clip_index.py  build_design_index.py  clip_embed.py  clip_text.py  demo_report.py  eval_clip.py  eval_design.py  eval_patent.py  imutil.py  match_core.py  match_design.py  segment.py  test_design.py  textmatch.py
patent/include/patent/: bm25.hpp  corpus.hpp  risk.hpp
patent/index/: patent_index.py
patent/src/: bm25.cpp  corpus.cpp  risk.cpp
patent/tests/: main.cpp  test_bm25.cpp  test_risk.cpp
scripts/: get_mnist.sh  get_shakespeare.sh  get_vietnamese.sh  get_vietnamese_corpus.py  repair_index.py
src/: autograd.cpp  csv.cpp  linalg.cpp  linreg.cpp  logreg.cpp  matrix.cpp  mnist.cpp  nn.cpp  random.cpp  stats.cpp
src/core/: linalg.cpp  matrix.cpp
src/data/: csv.cpp  mnist.cpp  tokenizer.cpp
src/dl/: nn.cpp
src/ml/: linreg.cpp  logreg.cpp
src/models/: transformer.cpp
src/prob/: random.cpp  stats.cpp
tests/: main_test.cpp  test_autograd.cpp  test_deploy.cpp  test_framework.hpp  test_framework.hpp.pch  test_linalg.cpp  test_matrix.cpp  test_optim.cpp  test_random.cpp  test_regression.cpp  test_stats.cpp  test_tokenizer.cpp  test_transformer.cpp
